chnage padding top (prevent overlapping with navbar)

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ html, body{
 }
 
 #container{
-    padding-top: 50px;
+    padding-top: 80px;
     min-height: 1000px;
     height: 1000px;
 }
